--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
+    "mongodb": "^6.18.0",
+    "mongodb-memory-server": "^10.2.0",
     "morgan": "^1.10.1",
     "sqlite3": "^5.1.7",
     "zod": "^4.0.15"
